--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (1.7) UNRELEASED; urgency=low
+noson-app (1.8) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 1.8
+  * Review style
 
   [ janbar ]
   * Release 1.7
