--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (1.8) UNRELEASED; urgency=low
+noson-app (2.0) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 2.0
+  * Add music services
 
   [ janbar ]
   * Release 1.8
