--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (2.2) UNRELEASED; urgency=low
+noson-app (2.3) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 2.3
+  * Handle music service search
 
   [ janbar ]
   * Release 2.2
