--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (2.3) UNRELEASED; urgency=low
+noson-app (2.4) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 2.4
+  * Handle registration for userId session
 
   [ janbar ]
   * Release 2.3
