--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (2.4) UNRELEASED; urgency=low
+noson-app (2.5) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 2.5
+  * Refactor for latest backend
 
   [ janbar ]
   * Release 2.4
