--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (3.2) UNRELEASED; urgency=low
+noson-app (3.3) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 3.3
+  * Clear the queue before playing bundle
 
   [ janbar ]
   * Release 3.2
