--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,9 @@
-noson-app (2.7) UNRELEASED; urgency=low
+noson-app (2.8) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 2.8
+  * Radio favorites no longer available since firmware >= 40.0
+  * Clear the queue when playing bundle
 
   [ janbar ]
   * Release 2.7
