--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (4.2) UNRELEASED; urgency=low
+noson-app (4.3) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 4.3.0
+  * Add a label for the services
 
   [ janbar ]
   * Release 4.2.0
