--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (4.3) UNRELEASED; urgency=low
+noson-app (4.4) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 4.4.0
+  * Additionnal music location
 
   [ janbar ]
   * Release 4.3.0
