--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-noson-app (4.5) UNRELEASED; urgency=low
+noson-app (5.0) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 5.0.0
+  * Refactoring index views
 
   [ janbar ]
   * Release 4.5.0
