--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-noson-app (5.5) UNRELEASED; urgency=low
+noson-app (5.6) UNRELEASED; urgency=low
+
+  [ janbar ]
+  * Release 5.6.0
+  * Parse discno from local media
+  * Sort album tracks by discno, trackno
+  * Minor fixes
 
   [ janbar ]
   * Release 5.5.0
